working newlines in modmail display on website

--- a/src/modules/website/templates/dashboard/modmail.pug
+++ b/src/modules/website/templates/dashboard/modmail.pug
@@ -20,4 +20,4 @@ block main
                     when 0
                     when 1
                     when 2
-                        p!= message.content
+                        p!= message.content.replaceAll("\n", "<br />")
