--- a/src/modules/website/templates/nsfw/index.pug
+++ b/src/modules/website/templates/nsfw/index.pug
@@ -1,4 +1,2 @@
-extends ../main/layout
-
-block main
+center
     iframe(width="1000", height="500", src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1")
