--- a/src/modules/website/templates/nsfw/index.pug
+++ b/src/modules/website/templates/nsfw/index.pug
@@ -1,2 +1,2 @@
 center
-    iframe(width="1000", height="500", src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1")
+    video(src="/static/rick.mp4") 
