--- a/src/modules/website/templates/nsfw/index.pug
+++ b/src/modules/website/templates/nsfw/index.pug
@@ -1,2 +1,3 @@
 center
-    video(src="/static/rick.mp4") 
+    video(width="1000", height="600", controls)
+        source(src="/static/rick.mp4", type="video/mp4")
