--- a/src/modules/website/templates/nsfw/index.pug
+++ b/src/modules/website/templates/nsfw/index.pug
@@ -1,3 +1,5 @@
 center
-    video(width="1000", height="600", controls)
+    h3 April Fools!
+    video(width="1000", height="600", autoplay)
         source(src="/static/rick.mp4", type="video/mp4")
+    h4 NOTE: This was just a joke. Shenhe Mains is still fully SFW.
