--- a/src/modules/website/templates/nsfw/index.pug
+++ b/src/modules/website/templates/nsfw/index.pug
@@ -1,5 +1,4 @@
+meta(http-equiv="refresh", content="2; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ")
 center
     h3 April Fools!
-    audio(width="1000", height="600", controls)
-        source(src="/static/rick.mp4", type="video/mp4")
     h4 NOTE: This was just a joke. Shenhe Mains is still fully SFW.
